<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="25dp">

                <TextView
                    android:id="@+id/popTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:layout_centerHorizontal="true"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="@string/more_information"/>

                <TextView
                    android:id="@+id/popListTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/surrounding_cities"
                    android:textSize="15sp"
                    android:textStyle="bold|italic"
                    android:layout_marginBottom="5dp"
                    android:layout_below="@id/popTitle"/>

                <Button
                    android:id="@+id/dismissPopTop"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:backgroundTint="@color/colorAccent"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:background="@android:drawable/ic_menu_close_clear_cancel"/>

                <TextView
                    android:id="@+id/popList"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:layout_below="@id/popListTitle"/>

                <WebView
                    android:id="@+id/htmlWebView"
                    android:layout_below="@id/popList"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                </WebView>

                <Button
                    android:id="@+id/dismissPop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/close"
                    android:layout_below="@id/htmlWebView"
                    android:layout_centerHorizontal="true"
                    android:background="@color/colorAccent"
                    android:textColor="@android:color/white"/>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>


    </ScrollView>

</LinearLayout>